# R-type

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  README.me  launch_clients  vcpkg-configuration.json  vcpkg.json
.github/workflows/: mirror.yml
Client/: client.cpp  client.hpp  main.cpp
Client/Handler/: CHElement.cpp  CHEnemy.cpp  CHObstacle.cpp  CHPlayer.cpp  CHProjectile.cpp  ClientHandler.cpp  client_handler.cpp
Client/Network_client/: TCP_socketClient.cpp  UDP_socket.cpp  client.cpp  client_network.cpp
Client/Network_client/Include/: TCP_socketClient.hpp  UDP_socket.hpp  client.hpp
Engine/: Game.cpp  Game.hpp  GameStatus.hpp
Engine/Assets/Config_assets/Levels/: level_01.json
Engine/Core/: entity.cpp  main.cpp  main_v2.cpp  registry.cpp
Engine/Core/Entities/: UI.cpp  background.cpp  button.cpp  checkpoint.cpp  decoration.cpp  enemy.cpp  gate.cpp  hitbox.cpp  image.cpp  item.cpp  obstacle.cpp  platform.cpp  player.cpp  png.cpp  powerup.cpp  projectile.cpp  random_element.cpp  sound.cpp  spawner.cpp  text.cpp  trap.cpp  triggerzone.cpp  weapon.cpp
Engine/Core/Entities/Include/: UI.hpp  (+24 more)
Engine/Core/Include/: entity.hpp  registry.hpp  sparse_array.hpp  zipper.hpp
Engine/Physics/: Collision.cpp
Engine/Physics/Include/: Collision.hpp
Engine/Rendering/: Raylib.cpp  Raylib.hpp  RenderUtils.cpp  RenderUtils.hpp  ViewMode.hpp
Engine/Rendering/scene/: AScene.cpp  AScene.hpp  ASceneHandler.cpp  IScene.hpp  SceneHandler.cpp  SceneHandler.hpp
Engine/Rendering/window/: AWindow.cpp  AWindow.hpp  IWindow.hpp  WindowHandler.cpp  WindowHandler.hpp
Engine/Scene/: GameScene.cpp  MenuScene.cpp  RoomSelectScene.cpp  ServerWaitScene.cpp  SettingsScene.cpp  UI.cpp  WaitingScene.cpp
Engine/Scene/Include/: GameScene.hpp  MenuScene.hpp  Renderer.hpp  RoomSelectScene.hpp  ServerWaitScene.hpp  SettingsScene.cpp  SettingsScene.hpp  UI.hpp  WaitingScene.hpp
Engine/Utils/: entity_parser.cpp  entity_storage.cpp  serializer.cpp
Engine/Utils/Include/: entity_parser.hpp  entity_storage.hpp  serializer.hpp
Game/: Game.cpp  Game.hpp  GameStatus.hpp  ServerGame.cpp  ServerGame.hpp  main.cpp
Game/Entities/: button.cpp  enemy.cpp  entity_parser.cpp  hitbox.cpp  obstacle.cpp  player.cpp  random_element.cpp  text.cpp
Game/Entities/Include/: background.hpp  button.hpp  component_registration.hpp  components.hpp  enemy.hpp  entity_parser.hpp  entity_storage.hpp  hitbox.hpp  obstacle.hpp  player.hpp  random_element.hpp  sound.hpp  text.hpp
Game/Game_logic/: InfiniteMapGenerator.cpp  InfiniteMapGenerator.hpp  Rtype_game.cpp  Rtype_game.hpp  Rungame.cpp  Rungame.hpp  Smah_game.cpp
Game/Game_logic/Rtype_game/: SGElement.cpp  SGEnnemy.cpp  SGObstacle.cpp  SGPlayer.cpp  SGProjectile.cpp
Game/Game_logic/Rungame/: SGBroadcast.cpp  SGElement.cpp  SGEnnemy.cpp  SGObstacle.cpp  SGPlayer.cpp  SGProjectile.cpp
Game/Game_logic/Smash_game/: SGObstacle.cpp  SGPlayer.cpp
Game/Scene/: ChatSystem.cpp  GSRender.cpp  GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  NetRenderState.hpp  Renderer.hpp  RoomCreationScene.cpp  RoomSelectScene.cpp  SceneHandler.cpp  ServerWaitScene.cpp  SettingsScene.cpp  SettingsScene.hpp  StatsScene.cpp  UI.cpp  UITheme.hpp  WaitingScene.cpp  game_scene.cpp
Game/Scene/Include/: ChatSystem.hpp  GameScene.hpp  MenuScene.hpp  Renderer.hpp  RoomCreationScene.hpp  RoomSelectScene.hpp  ServerWaitScene.hpp  SettingsScene.hpp  StatsScene.hpp  UI.hpp  WaitingScene.hpp  game_scene.hpp
Game/Système/: Collision.cpp  Collision.hpp
Game_Rtype/Game_logic/: Rungame.cpp  Rungame.hpp
Game_Rtype/Game_logic/Rtype_game/: SGEnnemy.cpp  SGProjectile.cpp
Game_Rtype/Game_logic/Rungame/: SGPlayer.cpp
Game_Rtype/Scene/: RoomSelectScene.cpp  SettingsScene.cpp  WaitingScene.cpp
Game_Rtype/Scene/Include/: RoomSelectScene.hpp  ServerWaitScene.hpp  WaitingScene.hpp
Game_SmashBros/Assets/Config_assets/: test.json
Game_SmashBros/Game_logic/: Rtype_game.cpp  Rungame.cpp  Rungame.hpp
Game_SmashBros/Game_logic/Rtype_game/: SGObstacle.cpp
Game_SmashBros/Game_logic/Rungame/: SGObstacle.cpp  SGPlayer.cpp
Game_SmashBros/Scene/: GameScene.cpp  MenuScene.cpp  RoomSelectScene.cpp  SceneHandler.cpp  ServerWaitScene.cpp  SettingsScene.cpp  WaitingScene.cpp
Game_SmashBros/Scene/Include/: GameScene.hpp  MenuScene.hpp  NetRenderState.hpp  RoomSelectScene.hpp  SceneHandler.hpp  SettingsScene.hpp  UI.hpp
Game_smash/Scene/: GameScene.cpp  MenuScene.cpp  RoomCreationScene.cpp  RoomSelectScene.cpp  SceneHandler.cpp  ServerWaitScene.cpp  SettingsScene.cpp  UI.cpp  WaitingScene.cpp
Game_smash/Scene/Include/: GameScene.hpp  MenuScene.hpp  RoomCreationScene.hpp  RoomSelectScene.hpp  SettingsScene.hpp
Server/: connexion.cpp  game_setup.cpp  main.cpp  server.cpp  server.hpp
Server/Game_logic/: ServerGame.cpp  game_core.cpp  game_setup.cpp
Server/Game_logic/Include/: ServerGame.hpp  game_core.hpp  game_setup.hpp
Server/Game_logic/ServerGame/: SGEnnemy.cpp  SGObstacle.cpp  SGPlayer.cpp  SGProjectile.cpp
Server/Include/: IServerGame.hpp  connexion.hpp  game_setup.hpp  server.hpp
Server/Network_handler/: TCP_socketServer.cpp  UDP_socket.cpp  connexion.cpp  server.cpp
Server/Network_handler/Include/: TCP_socketServer.hpp  UDP_socket.hpp  connexion.hpp  server.hpp
Server/Room/: Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp
Shared/: Log_msg.hpp  Logger.hpp  WeaponDefinition.cpp  WeaponDefinition.hpp  protocol.hpp
Shared/Sockets/: TCP_socket.cpp  UDP_socket.cpp
Shared/Sockets/Include/: TCP_socket.hpp  UDP_socket.hpp
Unit_test/: CMakeLists.txt  test_array.cpp  test_entity.cpp  test_registry.cpp  test_zipper.cpp
Unit_test/Engine/Core/: ArrayTests.cpp  EntityTests.cpp  RegistryTests.cpp  ZipperTests.cpp
Unit_test/Engine/Core/entities/: BackgroundTests.cpp  ButtonTests.cpp  CheckpointTests.cpp  ComponentTests.cpp  DecorationTests.cpp  EnemyTests.cpp  HitboxTests.cpp  ObstacleTests.cpp  PlayerTests.cpp  ProjectileTests.cpp  Random_elementTests.cpp  SoundTests.cpp  TextTests.cpp  WeaponTests.cpp
Unit_test/Engine/Physics/: CollisionTests.cpp
(+19 files in other folders)
